# models/__init__.py
@@ -1,9 +1,3 @@
-from .models import Base, FloorPlan, Property, User, Interested
+from .db_models import Base, FloorPlan, Property, User, Interested
 
-__all__ = [
-    "Base",
-    "FloorPlan",
-    "Property",
-    "User",
-    "Interested"
-]
+__all__ = ["Base", "FloorPlan", "Property", "User", "Interested"]
